--- a/fr1.html
+++ b/fr1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="frrr.css" />
-    <script defer src="frr.js"></script>
+    <link rel="stylesheet" href="./frrr.css" />
+    <script defer src="./frr.js"></script>
   </head>
   <body>
     <div class="welcome">
